# fastapi-job-post-website

./: README.md  main.py  pyproject.toml
apis/: base.py
apis/version1/: route_general_pages.py  route_users.py
core/: config.py
db/: session.py  tables.py
db/models/: jobs.py  users.py
db/repository/: users.py
templates/general_pages/: homepage.html
templates/shared/: base.html
